fix: Stop SearchPanes showing horizontal scroll bars
Jira Issue DD-1729

--- a/css/common.scss
+++ b/css/common.scss
@@ -50,6 +50,11 @@ div.dtsp-topRow {
     }
 }
 
+div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane table thead th,
+div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane table thead td {
+  width: 100% !important;
+}
+
 div.dt-button-collection {
     z-index: 2002;
 }
